force-app/main/default/objects/CTCT2__Upload_History__c/CTCT2__Upload_History__c.object-meta.xml
<CustomObject>
    <label>Constant Contact Upload History</label>
    <nameField>
        <displayFormat>Upload-{0}</displayFormat>
        <label>Upload History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upload History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>