force-app/main/default/objects/CTCT2__Upload_History__c/fields/CTCT2__Comment__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Comment__c</fullName>
    <label>Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>