force-app/main/default/objects/CTCT2__Upload_History__c/fields/CTCT2__Constant_Contact_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Constant_Contact_Activity_ID__c</fullName>
    <label>Constant Contact Activity ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>