force-app/main/default/objects/CTCT2__Upload_History__c/fields/CTCT2__Errors__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Errors__c</fullName>
    <inlineHelpText>Count of errors as from the Constant Contact activity.</inlineHelpText>
    <label># Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>