force-app/main/default/objects/CTCT2__Upload_History__c/fields/CTCT2__History_Type__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__History_Type__c</fullName>
    <label>History Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact List</fullName>
            </value>
            <value>
                <fullName>Contact Report Upload</fullName>
            </value>
            <value>
                <fullName>Lead List</fullName>
            </value>
            <value>
                <fullName>Lead Report Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>