force-app/main/default/objects/CTCT2__Upload_History__c/fields/CTCT2__Run_End_Time__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Run_End_Time__c</fullName>
    <inlineHelpText>When Constant Contact finished processing the uploaded contacts.</inlineHelpText>
    <label>Run End Time</label>
    <type>DateTime</type>
</CustomField>