force-app/main/default/objects/CTCT2__Upload_History__c/fields/CTCT2__Selected__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Selected__c</fullName>
    <label># Selected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>