force-app/main/default/objects/CTCT2__Upload_History__c/listViews/CTCT2__All.listView-meta.xml
<ListView>
    <fullName>CTCT2__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>